--- a/main.css
+++ b/main.css
@@ -141,8 +141,7 @@ hr {
 .about img{
   border: solid;
   border-width: 3px;
-  border-color: #FFD800;
-  border-radius: 50%;
+  border-color: #095256;
   box-shadow:5px 5px 5px #999;
 }
 
